# kakistocracy

./: Cargo.toml  Readme.md
examples/: d3d.rs  d3d9.rs  message_loop_only.rs
src/: lib.rs  sprite.rs
src/io/: _io.rs  static_file.rs
src/macros/: _macros.rs  include_file.rs
src/utility/: _utility.rs  frame_rate_counter.rs  send_sync_cell.rs  static_bytes_ref.rs  static_file.rs
src/windows/: _windows.rs  com_box.rs  error.rs  errors.rs  guid.rs  message.rs  message_loop.rs  misc.rs  monitor.rs  prelude.rs  rect.rs  window.rs
src/windows/d3d11/: _d3d11.rs  device.rs  mwc.rs  prelude.rs  render.rs  sprite.bin.ps_4_0  sprite.bin.vs_4_0  sprite.cmd  sprite.hlsl  sprite.rs  texture_cache.rs  thread_local.rs  traits.rs
src/windows/d3d9/: _d3d9.rs  d3d.rs  device.rs  errors.rs  mwc.rs  prelude.rs  render.rs  sprite.rs  texture_cache.rs  thread_local.rs  traits.rs
src/windows/dxgi/: _dxgi.rs  prelude.rs
src/windows/hwnd/: _hwnd.rs  assoc.rs  hooks.rs
