# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "kakistocracy"
version         = "0.0.0-git"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
repository      = "https://github.com/MaulingMonkey/kakistocracy"
documentation   = "https://docs.rs/kakistocracy"
license         = "Apache-2.0 OR MIT"
readme          = "Readme.md"
description     = "A pile of vaguely gamedev related code, governed by its least suitable and/or most unscrupulous programmers."
# keywords        = []
# categories      = []
exclude         = [".vscode"]

[features]
default         = ["d3d9", "d3d11"]
d3d9            = ["winapi/d3d9", "winapi/d3d9caps", "winapi/d3d9types"]
d3d11 = [
    "dxgi",

    "winapi/d3d11",
    "winapi/d3d11_1",
    "winapi/d3d11_2",
    "winapi/d3d11_3",
    "winapi/d3d11_4",
    "winapi/d3d11sdklayers",
    "winapi/d3d11shader",
    "winapi/d3d11sdklayers",
]
dxgi = [
    "winapi/dxgi",
    "winapi/dxgi1_2",
    "winapi/dxgi1_3",
    "winapi/dxgi1_4",
    "winapi/dxgi1_5",
    "winapi/dxgi1_6",
    "winapi/dxgidebug",
    "winapi/dxgiformat",
    "winapi/dxgitype",
]



[package.metadata.docs.rs]
all-features    = true
default-target  = "x86_64-pc-windows-msvc"

[dependencies]
futures         = { version = "0.3", features = ["executor"] }
instant         = "0.1"
lazy_static     = "1.4"
png             = "0.16"

[target.'cfg(windows)'.dependencies]
mcom            = "0.1.2"
wchar           = "0.6" # TODO: replace with abistr 0.2

[target.'cfg(windows)'.dependencies.winapi]
version         = "0.3.9"
features = [
    # misc
    "std",

    # shared
    "guiddef",
    "minwindef",
    "ntdef",
    "windef",
    "winerror",

    # um
    "errhandlingapi",
    "libloaderapi",
    "processthreadsapi",
    "unknwnbase",
    "winuser",
]

[profile.release]
debug = true
